--- a/style.css
+++ b/style.css
@@ -247,3 +247,132 @@ h2{
 #portfolio a:hover{
     transform: scale(1.05);
 }
+
+#contato{
+    text-align: center;
+
+    padding-bottom: 100px;
+    margin-bottom: 100px;
+}
+
+#contato h2{
+    margin-bottom: 70px;
+}
+
+#contato form{
+    width: 50%;
+
+    border-radius: 80px;
+
+    background-color: var(--roxo_gamifica);
+
+    margin: 0 auto;
+    padding: 60px 0;
+
+    display: flex;
+
+    flex-direction: column;
+    align-items: center;
+
+    color: #ffffff;
+    font-family: 'Montserrat';
+
+
+}
+
+#contato form label {
+    margin-bottom: 15px;
+
+    font-size: 17px;
+}
+
+.campo {
+    width: 60%;
+
+    margin-bottom: 50px;
+
+    text-align: left;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
+
+.campo input{
+    height: 40px;
+
+    color: white;
+    background-color: #351868;
+
+    border: none;
+    border-radius: 4px;
+
+    outline: none;
+
+    text-indent: 10px;
+
+    font-family: 'Montserrat';
+    font-size: 17px;
+}
+
+.campo input:focus, .campo-textarea textarea:focus{
+
+    outline: 2px solid var(--laranja_gamifica);
+}
+
+.campo-textarea {
+    width: 60%;
+
+    margin-bottom: 30px;
+
+    text-align: left;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.campo-textarea textarea{
+    color: white;
+    background-color: #351868;
+
+    border: none;
+    border-radius: 4px;
+
+    padding: 10px;
+
+    font-family: 'Montserrat';
+    font-size: 17px;
+
+    outline: none;
+
+    resize: none;
+}
+
+#contato form button{
+    height: 40px;
+    width: 60%;
+
+    font-family: 'Montserrat';
+    font-size: 17px;
+    font-weight: 600;
+
+    color: white;
+    background-color: var(--laranja_gamifica);
+
+    border-radius: 4px;
+    border: none;
+
+    text-transform: uppercase;
+
+    cursor: pointer;
+
+    transition: background-color 500ms ease;
+}
+
+#contato form button:hover{
+    background-color: #ad4929;
+}
+
+
