--- a/style.css
+++ b/style.css
@@ -29,11 +29,78 @@ html {
 .banner{
     height: 100vh;
 
-    background-image: linear-gradient(90deg, rgba(53,24,104,1) 0% , rgba(53,24,104,0.8) 100%) , url(img/bg-room\ 1.png);
     background-repeat: no-repeat;
 
     background-position: 165% 40%;
+
+    position: relative;
 }
+
+.primeiro-banner{
+    background-image: linear-gradient(90deg, rgba(53,24,104,1) 0% , rgba(53,24,104,0.8) 100%) , url(img/bg-room\ 1.png);
+
+}
+
+.segundo-banner {
+    background-image: linear-gradient(90deg, rgba(24,104,36,1) 0% , rgba(24,104,36,0.8) 100%) , url(img/bg-room\ 1.png);
+
+}
+
+.terceiro-banner{
+    background-image: linear-gradient(90deg, rgba(104,24,48,1) 0% , rgba(104,24,48,0.8) 100%) , url(img/bg-room\ 1.png);
+
+}
+
+#anterior, #proximo{
+    width: 30px;
+
+    background: none;
+    border: none;
+
+    cursor: pointer;
+
+    position: absolute;
+}
+
+#anterior{
+    left: 4%;
+}
+
+#proximo{
+    right: 4%;
+}
+
+#anterior svg, #proximo svg{
+    fill: #ffffff76;
+}
+
+.botoes{
+    width: 150px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    position: absolute;
+
+    bottom: 4%;
+    left: 50%;
+
+    margin-left: -75px;
+
+}
+
+.botoes button{
+    width: 30px;
+
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+.botoes button svg{
+    fill: #ffffff76;
+}
+
 
 header{
     height: 165px;
@@ -501,7 +568,8 @@ footer .container-grid{
         position: absolute;
         top: 165px;
         right: 0px;
-        
+
+        z-index: 1;
     }
 
     #sobre {
